--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,18 @@
+# Default server for the page
+server.port=8080
+
+spring.h2.console.path=/h2-console
+spring.h2.console.enabled=true
+#spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.username=sa
+#spring.datasource.password=
+
+spring.datasource.url=jdbc:mysql://localhost:3306/JavaTest
+spring.datasource.username=root
+spring.datasource.password=
+# Sets instruction to ddl auto -
+#   Create to make a table with values as columns.
+#   Validate checks table entities match java before doing anything
+#   Create-drop Creates table on start and Drops table on stop.
+spring.jpa.hibernate.ddl-auto=validate
 
